# talent-copilot

./: .env.template  .gitignore  README.md  account_page.py  app.py  app_chromadb.py  app_flask_server.py  confluence-json-output  constants.py  conversational-ui-script.py  employee-copilot-app.py  generate_summary.py  github-json-file  json-description-extractor.py  llamaindex-react-appraisal-generator.py  main-app-code.py  main.py  main_bckup.py  manager_dashboard.py  output  package-lock.json  package.json  pyproject.toml  requirements.txt  self_appraisal.py  self_appraisal_generator.py  test.py  tmp_inputs.py  user_mapping.db  user_mapping.py  users.db
auth/: auth.py  credentials.py  credentials.txt
db_utils/: db_operations_script.py
functions/: gap_analysis.py  generate_summary.py  learning_resource_finder.py  llamaindex_appraisal.py  llamaindex_summarization.py  self_appraisal.py
helpers/: atlassian-page-list.py  confluence-content-cleaner.py  confluence-user-contributions.py  confluence.py  get_llm.py  github.py  github_client.py  github_commits.py  ingestion.py  ingestion_with_chunks.py  jira.py  linkedin.py  llama-confluence.py  llama-github.py  llama-jira.py  pub_confluence.py  user-mapping-system.py  user_mapping.db  user_mapping.py  user_mapping_helper.py
models/: linkedin_profile_info.py  models.py  pydantic_models.py
pathforge-data/: jira-json-output
tools/: auth.py  credentials.py  generate_appraisal_docs.py  headers.py
ui/: account_page.py  career.py  conversational-ai-dashboard.tsx  dashboard.py  enterprise_admin.py  enterprise_admin_dashboard.py  individual_contributor_dashboard.py  individual_contributor_dashboard_conversationsal.py  learning-dashboard.py  learning_dashboard.py  login_signup.py  manager_dashboard.py  personal_profile.py  productivity.py  side_bar.py  skills-section.py  skills_manager.py  skills_section.py  style.py  title_bar.py  work_profile.py
web/: account_page.py  login_signup.py
(+12 files in other folders)
