[tool.poetry]
name = "talent-copilot-1"
version = "0.1.0"
description = ""
authors = ["Vijay Sankarasubramanian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
types-requests = "^2.32.0.20240712"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
