[tool.poetry]
name = "talent-copilot-1"
version = "0.1.0"
description = ""
authors = ["Vijay Sankarasubramanian <vijayanands@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
requests = "^2.32.3"
streamlit = "^1.37.0"
pysqlite3 = "^0.5.3"
python-dotenv = "^1.0.1"
llama-index = {extras = ["pinecone"], version = "^0.10.65"}
openai = "^1.37.1"
anthropic = "^0.32.0"
llama-cpp-python = "^0.2.85"
pdfkit = "^1.0.0"
hjson = "^3.1.0"
pinecone-client = "^5.0.1"
chromadb = "^0.5.5"
pinecone = "^5.0.1"
bcrypt = "^4.2.0"
sqlalchemy = "^2.0.32"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
